tzsetup (0.1) UNRELEASED; urgency=low

  * Split off from base-config and rewritten.
  * Only generate udeb (for now).
  * Remove GMT setting support, goes to a new udeb.
  * Removed confirmation questions and command line flags.
  * Renamed templates all around for consistency.
  * Ripped out all the nasty complexity of the state machine, now asks only
    one simple question.
  * Ripped out preseed_zone thing as there is only one question that needs
    preseding in all cases now: time/zone.
  * Generate templates containing lists of time zones for countries at build
    time, with overrides for specific countries in the .in file.
  * Add a prebaseconfig hook script to set the time zone in /target.
  * Time zone is set before boot, so no more issues with daemons.
    Closes: #313279
  * Allows easily entering timezone by hand (at boot prompt ;-)
    Closes: #21698
  * No more dual timezone selection methods, now there's only one.
    Closes: #274617
  * Add a customised list for Argintina, omitting the junk from zone.tab.
    Closes: #283149

 -- Joey Hess <joeyh@debian.org>  Sun, 24 Jul 2005 17:30:56 -0400