@@ -2,12 +2,6 @@ Template: tzsetup/time/zone
 Type: string
 Description: time zone
 
-Template: tzsetup/country/AR
-Type: select
-__Choices: America/Argentina/Buenos_Aires, America/Argentina/Cordoba, America/Argentina/Jujuy, America/Argentina/Tucuman, America/Argentina/Catamarca, America/Argentina/La_Rioja, America/Argentina/San_Juan, America/Argentina/Mendoza, America/Argentina/ComodRivadavia, America/Argentina/Rio_Gallegos, America/Argentina/Ushuaia
-Choices-en.UTF-8: Buenos Aires, Cordoba, Jujuy, Tucuman, Catamarca, La Rioja, San Juan, Mendoza, Comod Rivadavia (Chubut), Rio Gallegos (Santa Cruz), Ushuaia (Tierra del Fuego)
-_Description: Select your time zone:
-
 Template: tzsetup/country/AQ
 Type: select
 __Choices: Antarctica/McMurdo, Antarctica/South_Pole, Antarctica/Rothera, Antarctica/Palmer, Antarctica/Mawson, Antarctica/Davis, Antarctica/Casey, Antarctica/Vostok, Antarctica/DumontDUrville, Antarctica/Syowa
@@ -67,12 +61,6 @@ Template: tzsetup/country/FM
 Type: select
 __Choices: Pacific/Yap, Pacific/Truk, Pacific/Ponape, Pacific/Kosrae
 Choices-en.UTF-8: Yap, Truk, Ponape, Kosrae
-_Description: Select your time zone:
-
-Template: tzsetup/country/GB
-Type: select
-__Choices: Europe/London, Europe/Belfast
-Choices-en.UTF-8: London (Great Britain), Belfast (Northern Ireland)
 _Description: Select your time zone:
 
 Template: tzsetup/country/GL
