@@ -1,16 +1,9 @@
 #!/usr/bin/perl
 # Given a partial templates file on stdin which can contain some
 # existing templates for countries, generates a complete templates file on
-# stdout for all countries listed in the zone.tab.
-#
-# Most countries have only one time zone, and for these no template is
-# generated, but a mapping file is created mapping a country to its time
-# zone.
-#
-# Countries that have more than one time zone should ideally be included
-# in the input file, since generating a usable list of time zones for a
-# country is difficult, and it doesn't try very hard to make it
-# understandable.
+# stdout for all countries listed in the zone.tab. Also writes out the
+# tzmap file, and uses tzmap.override to force countries that have only one
+# zone. See README for details.
 
 use warnings;
 use strict;
@@ -53,11 +46,23 @@ while (<IN>) {
 }
 close IN;
 
+my %override;
+open (OVERRIDE, "tzmap.override") || die "tzmap.override: $!";
+while (<OVERRIDE>) {
+	chomp;
+	next if /^#/;
+	my ($cc, $zone)=split(' ', $_, 2);
+	$override{$cc}=1;
+	$cc2zone{$cc}=[$zone];
+}
+close OVERRIDE;
+
 open (TZMAP, ">tzmap") || die "tzmap: $!";
 foreach my $cc (sort keys %cc2zone) {
 	my $list=join(", ", @{$cc2zone{$cc}});
-	if (@{$cc2zone{$cc}} > 1) {
+	if (@{$cc2zone{$cc}} > 1 && ! $override{$cc}) {
 		my $englist=join(", ", map { $zonedesc{$_} } @{$cc2zone{$cc}});
+		print STDERR "warning: autogenerated template for $cc should be manually reviewed\n";
 		print "\nTemplate: tzsetup/country/$cc\n";
 		print "Type: select\n";
 		print "# Timezones for $cc. Translate to timezone names.\n";
